--- a/index.html
+++ b/index.html
@@ -45,23 +45,8 @@
                 </div>
             </div>
 
-            <!-- Правая колонка - статистика и заметки -->
+            <!-- Правая колонка - заметки и статистика (ПОМЕНЯЛ МЕСТАМИ) -->
             <div class="sidebar-column">
-                <!-- Статистика -->
-                <div class="stats-section">
-                    <h2>📊 Статистика месяца</h2>
-                    <div class="stats-grid">
-                        <div class="stat-card">
-                            <div class="stat-value" id="total-work-days">0</div>
-                            <div class="stat-label">Рабочих дней</div>
-                        </div>
-                        <div class="stat-card next-workday">
-                            <div class="stat-value" id="next-workday">-</div>
-                            <div class="stat-label">Ближайший рабочий день</div>
-                        </div>
-                    </div>
-                </div>
-
                 <!-- Заметки дня -->
                 <div class="day-notes-section">
                     <h2>📝 Заметки дня</h2>
@@ -74,6 +59,21 @@
                         <button id="add-day-note" class="btn btn-primary">
                             ➕ Добавить заметку
                         </button>
+                    </div>
+                </div>
+
+                <!-- Статистика -->
+                <div class="stats-section">
+                    <h2>📊 Статистика месяца</h2>
+                    <div class="stats-grid">
+                        <div class="stat-card">
+                            <div class="stat-value" id="total-work-days">0</div>
+                            <div class="stat-label">Рабочих дней</div>
+                        </div>
+                        <div class="stat-card next-workday">
+                            <div class="stat-value" id="next-workday">-</div>
+                            <div class="stat-label">Ближайший рабочий день</div>
+                        </div>
                     </div>
                 </div>
             </div>
