--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Календарь рабочего графика</title>
+    <title>Календарь</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,9 +21,9 @@
 
         <!-- Уведомление о режиме редактирования -->
         <div id="edit-notice" class="edit-notice" style="display: none;">
-            <strong>🔧 Режим редактирования активен</strong>
-            <p>Нажимайте на дни для отметки рабочих дней и добавления заметок</p>
-            <button id="save-changes" class="btn btn-secondary" style="margin-top: 10px;">💾 Сохранить изменения</button>
+            <strong>Режим редактирования</strong>
+            <p>Нажимайте на дни для отметки рабочих дней</p>
+            <button id="save-changes" class="btn btn-secondary" style="margin-top: 10px;">💾Сохранить</button>
         </div>
 
         <!-- Основной контент в две колонки -->
@@ -49,15 +49,15 @@
             <div class="sidebar-column">
                 <!-- Заметки дня -->
                 <div class="day-notes-section">
-                    <h2>📝 Заметки дня</h2>
-                    <div id="selected-day-info" class="selected-day-info">Выберите день для просмотра заметок</div>
+                    <h2>📝Заметки</h2>
+                    <div id="selected-day-info" class="selected-day-info">Выберите день для просмотра</div>
                     <div id="day-notes-list" class="day-notes-list">
                         <div class="no-notes">Заметок нет</div>
                     </div>
                     <!-- Кнопка для добавления заметки -->
                     <div class="day-notes-actions">
                         <button id="add-day-note" class="btn btn-primary">
-                            ➕ Добавить заметку
+                            Добавить
                         </button>
                     </div>
                 </div>
@@ -85,17 +85,17 @@
     <div id="add-note-modal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title" id="add-note-title">Добавить заметку</h3>
+                <h3 class="modal-title" id="add-note-title">Добавить</h3>
                 <button class="close-btn" onclick="closeAddNoteModal()">×</button>
             </div>
             <form id="add-note-form">
                 <div class="form-group">
-                    <label class="form-label">Текст заметки:</label>
+                    <label class="form-label">Текст</label>
                     <textarea class="form-textarea" id="note-text" placeholder="Введите вашу заметку..." required></textarea>
                 </div>
                 <div class="form-actions">
                     <button type="button" class="btn btn-outline" onclick="closeAddNoteModal()">Отмена</button>
-                    <button type="submit" class="btn btn-primary">💾 Сохранить заметку</button>
+                    <button type="submit" class="btn btn-primary">💾Сохранитьу</button>
                 </div>
             </form>
         </div>
@@ -105,7 +105,7 @@
     <div id="reply-note-modal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title">💬 Ответить на заметку</h3>
+                <h3 class="modal-title">💬Ответить</h3>
                 <button class="close-btn" onclick="closeReplyModal()">×</button>
             </div>
             <form id="reply-note-form">
@@ -118,7 +118,7 @@
                 </div>
                 <div class="form-actions">
                     <button type="button" class="btn btn-outline" onclick="closeReplyModal()">Отмена</button>
-                    <button type="submit" class="btn btn-primary">💾 Отправить ответ</button>
+                    <button type="submit" class="btn btn-primary">💾Отправить</button>
                 </div>
             </form>
         </div>
@@ -128,11 +128,11 @@
     <div id="time-modal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title" id="time-modal-title">Выберите время работы</h3>
+                <h3 class="modal-title" id="time-modal-title">Выберите время</h3>
                 <button class="close-btn" onclick="closeTimeModal()">×</button>
             </div>
             <div class="form-group">
-                <label class="form-label">Начало работы:</label>
+                <label class="form-label">Начало:</label>
                 <select class="form-select" id="work-time-start">
                     <option value="07:30">07:30</option>
                     <option value="09:00">09:00</option>
@@ -141,14 +141,14 @@
                 </select>
             </div>
             <div class="form-group">
-                <label class="form-label">Окончание работы:</label>
+                <label class="form-label">Окончание:</label>
                 <select class="form-select" id="work-time-end">
                     <!-- Опции будут заполняться динамически -->
                 </select>
             </div>
             <div class="form-actions">
                 <button type="button" class="btn btn-outline" onclick="closeTimeModal()">Отмена</button>
-                <button type="button" class="btn btn-primary" onclick="saveWorkTime()">💾 Сохранить время</button>
+                <button type="button" class="btn btn-primary" onclick="saveWorkTime()">💾Сохранить</button>
             </div>
         </div>
     </div>
@@ -157,15 +157,15 @@
     <div id="auth-modal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title">🔐 Выберите пользователя</h3>
+                <h3 class="modal-title">Выберите пользователя</h3>
                 <button class="close-btn" onclick="closeAuthModal()">×</button>
             </div>
             <form id="auth-form">
                 <div class="form-group">
-                    <label class="form-label">Выберите пользователя:</label>
+                    <label class="form-label"></label>
                     <select class="form-select" id="user-type">
-                        <option value="tanya">Таня (отметка дней)</option>
-                        <option value="dima">Дима (выбор времени)</option>
+                        <option value="tanya">Таня</option>
+                        <option value="dima">Дима</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -174,7 +174,7 @@
                 </div>
                 <div class="form-actions">
                     <button type="button" class="btn btn-outline" onclick="closeAuthModal()">Отмена</button>
-                    <button type="submit" class="btn btn-primary">🔓 Войти</button>
+                    <button type="submit" class="btn btn-primary">Войти</button>
                 </div>
             </form>
         </div>
@@ -188,3 +188,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
