--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="edit-notice" class="edit-notice" style="display: none;">
             <strong>Режим редактирования</strong>
             <p>Нажимайте на дни для отметки рабочих дней</p>
-            <button id="save-changes" class="btn btn-secondary" style="margin-top: 10px;">💾Сохранить</button>
+            <button id="save-changes" class="btn btn-secondary" style="margin-top: 10px;">Сохранить</button>
         </div>
 
         <!-- Основной контент в две колонки -->
@@ -95,7 +95,7 @@
                 </div>
                 <div class="form-actions">
                     <button type="button" class="btn btn-outline" onclick="closeAddNoteModal()">Отмена</button>
-                    <button type="submit" class="btn btn-primary">💾Сохранитьу</button>
+                    <button type="submit" class="btn btn-primary">Сохранить</button>
                 </div>
             </form>
         </div>
@@ -118,7 +118,7 @@
                 </div>
                 <div class="form-actions">
                     <button type="button" class="btn btn-outline" onclick="closeReplyModal()">Отмена</button>
-                    <button type="submit" class="btn btn-primary">💾Отправить</button>
+                    <button type="submit" class="btn btn-primary">Отправить</button>
                 </div>
             </form>
         </div>
@@ -148,7 +148,7 @@
             </div>
             <div class="form-actions">
                 <button type="button" class="btn btn-outline" onclick="closeTimeModal()">Отмена</button>
-                <button type="button" class="btn btn-primary" onclick="saveWorkTime()">💾Сохранить</button>
+                <button type="button" class="btn btn-primary" onclick="saveWorkTime()">Сохранить</button>
             </div>
         </div>
     </div>
@@ -188,4 +188,5 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
