--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="sidebar-column">
                 <!-- Заметки дня -->
                 <div class="day-notes-section">
-                    <h2>📝Заметки</h2>
+                    <h2>Заметки</h2>
                     <div id="selected-day-info" class="selected-day-info">Выберите день для просмотра</div>
                     <div id="day-notes-list" class="day-notes-list">
                         <div class="no-notes">Заметок нет</div>
@@ -64,7 +64,7 @@
 
                 <!-- Статистика -->
                 <div class="stats-section">
-                    <h2>📊 Статистика месяца</h2>
+                    <h2>Статистика месяца</h2>
                     <div class="stats-grid">
                         <div class="stat-card">
                             <div class="stat-value" id="total-work-days">0</div>
@@ -188,5 +188,6 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
